# ibus-array

./: .gitignore  INSTALL  meson.build
data/: array30-OpenVanilla-big-v2026-1.01-20260406.cin  array30-OpenVanilla-big-v2026-1.02-20260407.cin  array30-phrase-20260528.txt  cin2sqlite.py  emptyDB.py  gen_array_db.py  meson.build  updatePhrase.py  updateShortcode.py
po/: zh_TW.po
src/: engine.c  main.c
